...
            android:maxLines="2"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/klimatskiTipItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toEndOf="@+id/slikaItem"
            app:layout_constraintTop_toBottomOf="@+id/nazivItem"
            android:ellipsize="end"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/nazivItem"
            android:layout_width="0dp"
...
